cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   cardano-explorer-node
version:                1.3.0
synopsis:               The DB node for the Cardano Block Explorer
description:            A Cardano node that follows the Cardano chain and inserts data from the
                        chain into a PostgresQL database.
homepage:               https://github.com/input-output-hk/cardano-explorer
bug-reports:            https://github.com/input-output-hk/cardano-explorer/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:      Explorer.Node

  other-modules:        Explorer.Node.Config
                        Explorer.Node.Database
                        Explorer.Node.Error
                        Explorer.Node.Genesis
                        Explorer.Node.Metrics
                        Explorer.Node.Plugin
                        Explorer.Node.Plugin.Default
                        Explorer.Node.Plugin.Default.Insert
                        Explorer.Node.Plugin.Default.Rollback
                        Explorer.Node.Util
                        Explorer.Node.Tracing.ToObjectOrphans

  build-depends:        base                            >= 4.12         && < 4.13
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , cardano-binary
                      , cardano-crypto
                      , cardano-crypto-wrapper
                      , cardano-explorer-db
                      , cardano-ledger
                      , cardano-prelude
                      , cardano-shell
                      , cborg
                      , containers
                      , contra-tracer
                      , cryptonite
                      , extra
                      , formatting
                      , io-sim-classes
                      , iohk-monitoring
                      , memory
                      , monad-logger
                      , optparse-applicative
                      , network
                      , ouroboros-consensus
                      , ouroboros-network
                      , persistent
                      , prometheus
                      , serialise
                      , stm
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , typed-protocols
                      , typed-protocols-cbor
                      , yaml

executable cardano-explorer-node
  default-language:     Haskell2010
  main-is:              cardano-explorer-node.hs
  hs-source-dirs:       app

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unsafe

  build-depends:        base                            >= 4.12         && < 4.13
                      , bytestring
                      , cardano-crypto-wrapper
                      , cardano-explorer-db
                      , cardano-explorer-node
                      , cardano-ledger
                      , cardano-prelude
                      , cardano-binary
                      , cborg
                      , formatting
                      , cardano-shell
                      , ouroboros-consensus
                      , io-sim-classes
                      , iohk-monitoring
                      , network
                      , optparse-applicative
                      , ouroboros-network
                      , serialise
                      , text
                      , typed-protocols
                      , typed-protocols-cbor

test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  hs-source-dirs:       test

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-explorer-node
