cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   cardano-explorer
version:                0.1.0.0
synopsis:               A Block Explorer for the Cardano network
description:
homepage:               https://github.com/input-output-hk/cardano-explorer
bug-reports:            https://github.com/input-output-hk/cardano-explorer/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Language
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:      Explorer.Web
  -- other-modules:

  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-explorer-db

executable cardano-explorer
  default-language:    Haskell2010
  main-is:             cardano-explorer.hs
  hs-source-dirs:      app

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  -- other-modules:

  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-explorer


test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  hs-source-dirs:       test

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-explorer
