cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   cardano-explorer
version:                0.1.0.0
synopsis:               A Block Explorer for the Cardano network
description:
homepage:               https://github.com/input-output-hk/cardano-explorer
bug-reports:            https://github.com/input-output-hk/cardano-explorer/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Language
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Weverything
                        -Wno-safe
                        -Wno-unsafe
                        -Wno-implicit-prelude
                        -Wno-all-missed-specialisations
                        -Wno-missing-import-lists

  exposed-modules:      Explorer.Web
                      , Explorer.Web.Api
                      , Explorer.Web.ClientTypes
                      , Explorer.Web.Error
                      , Explorer.Web.LegacyApi
                      , Explorer.Web.API1
                      , Explorer.Web.Query
                      , Explorer.Web.Server
                      , Explorer.Web.Server.BlockPagesTotal
                      , Explorer.Web.Server.BlocksPages
                      , Explorer.Web.Server.BlocksTxs
                      , Explorer.Web.Server.EpochPage
                      , Explorer.Web.Server.EpochSlot
                      , Explorer.Web.Server.GenesisAddress
                      , Explorer.Web.Server.GenesisPages
                      , Explorer.Web.Server.GenesisSummary
                      , Explorer.Web.Server.StatsTxs
                      , Explorer.Web.Server.TxLast
                      , Explorer.Web.Server.TxsSummary
                      , Explorer.Web.Server.Util
                      , Explorer.Web.Server.Types
                      , Explorer.Web.TestServer
  -- other-modules:

  build-depends:        base                            >= 4.12         && < 4.13
                      , QuickCheck
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , cardano-crypto-class
                      , cardano-explorer-db
                      , cardano-ledger
                      , constraints
                      , deepseq
                      , esqueleto
                      , extra
                      , formatting
                      , generics-sop
                      , hashable
                      , memory
                      , monad-logger
                      , mtl
                      , persistent
                      , persistent-postgresql
                      , servant
                      , servant-server
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , warp

executable cardano-explorer
  default-language:    Haskell2010
  main-is:             cardano-explorer.hs
  hs-source-dirs:      app

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  -- other-modules:

  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-explorer
                      , Cabal

executable cardano-webapi-compare
  default-language:    Haskell2010
  main-is:             cardano-webapi-compare.hs
  hs-source-dirs:      app

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  -- other-modules:

  build-depends:        base                            >= 4.12         && < 4.13
                      , async
                      , cardano-explorer
                      , Diff
                      , bytestring
                      , http-conduit
                      , text
                      , text-ansi

executable cardano-mock-explorer
  default-language:    Haskell2010
  main-is:             mock.hs
  hs-source-dirs:      app
  ghc-options:          -Wall
                        -Werror
  build-depends:        base                            >= 4.12         && < 4.13
                      , cardano-explorer

test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  hs-source-dirs:       test

  other-modules:        Test.IO.Explorer.Web.Query

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  build-depends:        base                            >= 4.12         && < 4.13
                      , bytestring
                      , cardano-explorer
                      , cardano-explorer-db
                      , cardano-explorer-db-test
                      , containers
                      , monad-logger
                      , persistent-postgresql
                      , tasty
                      , tasty-hunit
                      , text
                      , transformers
